# Agentic

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: digest.yml  judge.yml  nightly.yml  on_push.yml
agents/: __init__.py  base.py  configs.py  docs_agent.py  github_agent.py  guardian_agent.py  infra_agent.py  maintenance_agent.py  probe_agent.py  run_docs_loop.py  spawner.py  synthesis_agent.py
claude/: __init__.py  mcp_bridge.py
core/: __init__.py  dispatcher.py  embeddings.py  event_queue.py  export.py  metadata.py  server.py  state.py  vector_store.py
data/launchers/: docs.ps1  infra.ps1  orchestrator.ps1  probe.ps1
data/outputs/: docs_1773029701.txt  docs_1773030730.txt  docs_1773036186.txt  docs_1773036542.txt  docs_1773036658.txt  docs_1773038601.txt  docs_1773038985.txt  github_1773031311.txt  github_1773037932.txt  github_1773038076.txt  github_1773039188.txt  github_1773039432.txt  github_1773039510.txt  guardian_1773031300.txt  guardian_1773031400.txt  guardian_1773031513.txt  guardian_1773031729.txt  guardian_1773035518.txt  guardian_1773035882.txt  guardian_1773037400.txt  (+30 more)
experiments/: judge.py
hooks/: __init__.py  install.py  post_commit.py
workspace/: CLAUDE.md  DERIVATION_CHAIN.md  DOCUMENTATION_STATUS.md  FORCED_MATH_JOURNAL.md  GIT_HISTORY_FINAL.md  GIT_HISTORY_SUMMARY.md  INDEX.md  MODULE_CATALOG.md  PROGRESS.md  PROPERTY_SCORECARD.md  README.md  SYNTHESIS_REPORT.md  WORK_NARRATIVE.md  derivation_02_quaternion.md  forced_structures.py  trinity_algebra.py  verdict.json
(+118 files in other folders)
