[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentic"
version = "0.1.0"
description = "Agentic orchestration platform for Rift Realms research and development"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "requests>=2.31",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25",  # for FastAPI test client
]
embeddings = [
    "sentence-transformers>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
